added unit test

--- a/TaskTracker.xcodeproj/xcshareddata/xcschemes/TaskTracker.xcscheme
+++ b/TaskTracker.xcodeproj/xcshareddata/xcschemes/TaskTracker.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "85C67C3D2EA7B67500C60615"
+               BuildableName = "TaskTrackerTests.xctest"
+               BlueprintName = "TaskTrackerTests"
+               ReferencedContainer = "container:TaskTracker.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
